--- a/LazyCafe/app/src/main/res/layout/activity_login.xml
+++ b/LazyCafe/app/src/main/res/layout/activity_login.xml
@@ -1,93 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/coffeewallpaper"
     tools:context="kmitl.bank58070041.finalproject.lazycafe.LoginActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:background="#FF967357">
+    <com.facebook.login.widget.LoginButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+    
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <EditText
-                android:id="@+id/username"
-                android:drawableStart="@drawable/ic_person_black_24dp"
-                android:drawableLeft="@drawable/ic_person_black_24dp"
-                android:textColor="#fff"
-                android:textColorHint="#fff"
-                android:background="#FF967357"
-                android:layout_marginTop="30dp"
-                android:layout_gravity="center"
-                android:hint="@string/username"
-                android:padding="10dp"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content" />
-
-            <EditText
-                android:id="@+id/password"
-                android:inputType="textPassword"
-                android:drawableStart="@drawable/ic_lock_black_24dp"
-                android:drawableLeft="@drawable/ic_lock_black_24dp"
-                android:textColor="#fff"
-                android:textColorHint="#fff"
-                android:background="#FF967357"
-                android:layout_marginTop="15dp"
-                android:layout_gravity="center"
-                android:hint="@string/password"
-                android:padding="10dp"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/btnLogin"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:layout_gravity="center"
-                android:text="LOGIN"
-                android:onClick="loginClick"
-                android:textSize="18dp"
-                android:textColor="#fff"
-                android:background="#5c462b"/>
-
-            <TextView
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:layout_marginTop="8dp"
-                android:text="OR"
-                android:textColor="#000"
-                android:textSize="18dp"
-                android:layout_gravity="center"/>
-
-            <Button
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_gravity="center"
-                android:text="@string/login_with_facebook"
-                android:textColor="#fff"
-                android:background="#3b5998"/>
-        </LinearLayout>
-    </LinearLayout>
-
-
-</RelativeLayout>
+</LinearLayout>
