--- a/LazyCafe/app/src/main/res/layout/activity_login.xml
+++ b/LazyCafe/app/src/main/res/layout/activity_login.xml
@@ -6,15 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/coffeewallpaper"
-    tools:context="kmitl.bank58070041.finalproject.lazycafe.LoginActivity">
+    tools:context=".controller.activity.LoginActivity">
 
     <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
+        android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp" />
+        android:layout_gravity="center_vertical" />
 
 
 </LinearLayout>
