--- a/LazyCafe/app/src/main/res/layout/activity_main.xml
+++ b/LazyCafe/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kmitl.bank58070041.finalproject.lazycafe.MainActivity">
+    tools:context=".controller.activity.MainActivity">
 
     <FrameLayout
         android:id="@+id/frameLayout"
