--- a/LazyCafe/app/src/main/res/layout/fragment_kind_coffee.xml
+++ b/LazyCafe/app/src/main/res/layout/fragment_kind_coffee.xml
@@ -1,13 +1,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".controller.fragment.QueueFragment">
+    android:layout_height='match_parent'
+    tools:context="kmitl.bank58070041.finalproject.lazycafe.controller.fragment.KindCoffeeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/type"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/queue" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
