--- a/LazyCafe/app/src/main/res/layout/activity_kind_coffeepage.xml
+++ b/LazyCafe/app/src/main/res/layout/activity_kind_coffeepage.xml
@@ -97,7 +97,7 @@
         android:background="@drawable/blender"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/latte_macchiato"
-        app:layout_constraintHorizontal_bias="0.283"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toEndOf="@+id/affogato"
         app:layout_constraintTop_toBottomOf="@+id/flat_white"
         app:layout_constraintVertical_bias="0.233" />
@@ -114,6 +114,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mocha"
         app:layout_constraintVertical_bias="0.214" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="103dp"
+        android:layout_height="57dp"
+        android:layout_marginBottom="36dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:onClick="btnNextClick"
+        android:text="Next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
