--- a/LazyCafe/app/src/main/res/layout/activity_login.xml
+++ b/LazyCafe/app/src/main/res/layout/activity_login.xml
@@ -10,9 +10,11 @@
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/loginButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical" />
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="35dp"
+        android:layout_marginLeft="80dp" />
 
 
 </LinearLayout>
