--- a/LazyCafe/app/src/main/res/layout/fragment_queue.xml
+++ b/LazyCafe/app/src/main/res/layout/fragment_queue.xml
@@ -2,13 +2,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".controller.fragment.QueueFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content"
+        android:background="#000"
+        android:padding="10dp"
+        android:text="Queue"
+        android:textAlignment="center"
+        android:textColor="#fff"
+        android:textSize="30dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp" />
 
 </LinearLayout>
