--- a/LazyCafe/app/src/main/res/layout/activity_type_coffee.xml
+++ b/LazyCafe/app/src/main/res/layout/activity_type_coffee.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nextPage"
@@ -10,21 +10,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#cca668"
+        android:background="#000"
         android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="600dp"
-        android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            android:padding="10dp"
+            android:text="Queue"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textSize="30dp" />
         <ImageView
             android:id="@+id/blender"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="30dp"
-            android:layout_weight="1"
             android:background="@drawable/blender" />
         <TextView
             android:layout_width="match_parent"
@@ -38,7 +44,6 @@
             android:layout_height="100dp"
             android:layout_width="100dp"
             android:layout_margin="30dp"
-            android:layout_weight="1"
             android:background="@drawable/ice" />
         <TextView
             android:layout_width="match_parent"
@@ -52,28 +57,28 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="30dp"
-            android:layout_weight="1"
+
             android:background="@drawable/hot" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Hot (+10 Bath)"
             android:textAlignment="center"
-            android:textColor="#fff"/>
+            android:textColor="#fff" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:gravity="center">
 
         <Button
             android:layout_width="92dp"
             android:layout_height="59dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="160dp"
             android:onClick="btnNextClick"
             android:text="next"
             android:textColor="#fff" />
     </LinearLayout>
     </LinearLayout>
-</FrameLayout>
+</RelativeLayout>
