--- a/LazyCafe/app/src/main/res/layout/fragment_home.xml
+++ b/LazyCafe/app/src/main/res/layout/fragment_home.xml
@@ -1,13 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".controller.fragment.HomeFragment">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center">
+        <ImageView
+            android:id="@+id/goCoffee"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
+            android:background="@drawable/go"/>
+</LinearLayout>
 
-    <Button
-        android:id="@+id/buyCoffee"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/go_coffee" />
-
-</FrameLayout>
+</RelativeLayout>
