--- a/LazyCafe/app/src/main/res/layout/activity_extra.xml
+++ b/LazyCafe/app/src/main/res/layout/activity_extra.xml
@@ -15,10 +15,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
             android:background="#ffffff"
             android:padding="10dp"
-            android:layout_marginBottom="50dp"
-            android:text="Kind Coffee"
+            android:text="Extra"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="30dp" />
